added about section with emmet

--- a/index.html
+++ b/index.html
@@ -71,6 +71,29 @@
           </div>
         </div>
       </section>
+
+      <!-- section.about-me>h2.section-title{About Me}+p.description{...}+ul>li*4>strong{Label: }+span{Value} -->
+
+      <!-- <section class="about secondary-bg">
+        <h2 class="section-title">About Me</h2>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <ul class="about-items">
+          <li class="about-item">
+            <strong>Name</strong><span>Mary hardy</span>
+          </li>
+          <li class="about-item">
+            <strong>Email</strong><span>info@gmail.com</span>
+          </li>
+          <li><strong>Date of birth</strong><span>11 November 1987</span></li>
+          <li><strong>From</strong><span>LA, USA</span></li>
+        </ul>
+      </section> -->
     </main>
     <footer></footer>
   </body>
