--- a/index.html
+++ b/index.html
@@ -228,6 +228,34 @@
         <button class="btn-primary">Download CV</button>
       </section>
     </main>
-    <footer></footer>
+    <footer class="secondary-bg">
+      <div class="footer-column">
+        <div class="section-title">Lets Connect</div>
+        <p class="section-description">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div>
+          <a href=""><img src="./assets/images/icons/facebook.png" alt="" /></a>
+          <a href=""><img src="./assets/images/icons/twitter.png" alt="" /></a>
+          <a href=""><img src="./assets/images/icons/insta.png" alt="" /></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3 class="section-title">Lets Message me</h3>
+        <form action="">
+          <input type="text" name="" id="" placeholder="Your name" />
+          <input type="email" name="" id="" placeholder="Your email" />
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Message"
+          ></textarea>
+          <input class="btn-primary" type="submit" value="Submit" />
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
